Temp fix for overlapping master-overlay-secondary and toolbar; This seemed to take care of a few errors in the address bar spec.

--- a/app/assets/stylesheets/modules/master_overlay.css.scss
+++ b/app/assets/stylesheets/modules/master_overlay.css.scss
@@ -88,9 +88,11 @@
 .master-overlay-secondary {
   background-color: $master-overlay-parent-bg-color;
   left: 40%;
+  /* JS: Temporary, ugly fix to prevent overlap */
+  top: 120px;
   right: 0%;
   overflow: hidden;
-  z-index: 70;
+  z-index: 100;
   position: absolute;
   height: 100%;
   transition-property: right, left;
